welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: not found: value couleur
    couleur = getCouleurSol()
    ^Array1:7: error: not found: value couleur
    motif(i) = couleur
               ^